removed redundant pictures removed redundant stylesheets added SportsController added basic navigation added index pages

--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -15,11 +15,11 @@
 
 		<div id="templatemo_menu">
 			<ul>
-				<li><a href="#" class="current">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="http://www.templatemo.com" target="_parent">Templates</a></li>
-				<li><a href="http://www.koflash.com" target="_parent">Gallery</a></li>
-				<li><a href="#">Members</a></li>
+				<li><h:link value="Home" outcome="/index" styleClass="current" /></li>
+				<li><h:link value="Sports" outcome="/sports/index" /></li>
+				<li><h:link value="My Leagues" outcome="/leagues/index" /></li>
+				<li><h:link value="My Matches" outcome="/matches/index" /></li>
+				<li><h:link value="My Account" outcome="/users/index" /></li>
 				<li><a href="#" class="last">Contact Us</a></li>
 			</ul>
 		</div>
@@ -27,7 +27,7 @@
 
 		<div id="templatemo_header_02">
 			<div id="site_title">
-				Sport Center<span>Your tagline goes here</span>
+				Sports League System<span>Select, Participate, Compete, Win, Decimate ...</span>
 			</div>
 		</div>
 
@@ -55,7 +55,7 @@
 		
 		<div id="templatemo_footer">
 
-			Copyright © 2048 <a href="#">Your Company Name</a> | Designed by <a
+			Copyright © 2013 <a href="#">Best JBoss Masters</a> | Designed by <a
 				href="http://www.templatemo.com" target="_parent">Free CSS
 				Templates</a>
 
