--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -79,6 +79,15 @@ img {
 	font-weight: bold;
 }
 
+.header_03 {
+	clear: both;
+	color: #fcd82b;
+	padding: 5px 0 10px 0;
+	border-bottom: 1px dashed #fcd82b;
+	margin-bottom: 20px;
+	font-size: 18px;
+}
+
 .em_text {
 	color: #ffffff;
 }
