added styles to table

--- a/src/main/webapp/WEB-INF/templates/filter.xhtml
+++ b/src/main/webapp/WEB-INF/templates/filter.xhtml
@@ -18,11 +18,12 @@
 				</h:column>
 				<h:column>
 					<div class="button_01" style="display: inline;">
-						<h:commandLink value="Submit"
+						<h:commandLink value="Filter"
 							action="index?faces-redirect=true&amp;includeViewParams=true" />
 					</div>
 				</h:column>
 			</h:panelGrid>
 		</h:form>
 	</div>
+	<br />
 </ui:composition>
