added edit action to leagues

--- a/src/main/webapp/WEB-INF/templates/filter.xhtml
+++ b/src/main/webapp/WEB-INF/templates/filter.xhtml
@@ -19,13 +19,15 @@
 				<h:column>
 					<div class="button_01" style="width: 70px;">
 						<h:commandLink value="Filter"
-							action="index?faces-redirect=true&amp;includeViewParams=true" style="width: 50px;" />
+							action="index?faces-redirect=true&amp;includeViewParams=true" style="width: 50px;">
+						</h:commandLink>
 					</div>
 				</h:column>
 				<h:column>
 					<div class="button_01" style="width: 70px;">
 						<h:commandLink value="Reset"
-							action="index?faces-redirect=true&amp;includeViewParams=false" style="width: 50px;" />
+							action="index?faces-redirect=true&amp;includeViewParams=false" style="width: 50px;">
+						</h:commandLink>
 					</div>
 				</h:column>
 			</h:panelGrid>
