added front page and event section

--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -51,29 +51,21 @@
 				<div class="header_03">News &amp; Events</div>
 
 				<div class="news_event_section">
-					<div class="header_02">Lorem ipsum dolor sit amet</div>
+					<div class="header_02">We have successfully finished Sport and League management pages</div>
 					<img
 						src="#{request.contextPath}/resources/css/images/templatemo_image_01.jpg"
 						alt="photo one" />
-					<p>Donec ut felis libero. Nunc vel libero libero, in dignissim
-						urna. Praesent tempor, arcu at egestas vestibulum, lorem elit
-						viverra velit, sit amet gravida ligula ante et sem.</p>
-					<div class="button_01">
-						<a href="#">Read more</a>
-					</div>
+					<p>An administrator can now successfully create, remove and update sports and pages. However registration
+					for competition still waits to be done as well as real database.</p>
 				</div>
 
 				<div class="news_event_section">
-					<div class="header_02">Integer in magna nec lacus</div>
+					<div class="header_02">Old Trafford to be demolished</div>
 					<img
 						src="#{request.contextPath}/resources/css/images/templatemo_image_00.jpg"
 						alt="photo two" />
-					<p>Suspendisse potenti. Aliquam erat volutpat. Mauris tempus
-						massa vitae sem posuere pharetra. Donec eget neque erat, ac
-						venenatis libero. Cras consequat pharetra sem ut imperdiet.</p>
-					<div class="button_01">
-						<a href="#">Read more</a>
-					</div>
+					<p>Today CEO of Manchester United announced the beginning of renovation of Old Trafford stadium. According to plan old stadium
+					which stood as a remainder of once exceptional glory of this club should be tear down by December and replaced by new one.</p>
 				</div>
 
 				<div class="cleaner"></div>
