added users management

--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -24,10 +24,12 @@
 						styleClass="#{currentTitle=='Leagues' ? 'current' : ''}" /></li>
 				<li><h:link value="My Matches" outcome="/matches/index"
 						styleClass="#{currentTitle=='Matches' ? 'current' : ''}" /></li>
-				<li><h:link value="My Account" outcome="/users/index"
-						styleClass="#{currentTitle=='Users' ? 'current' : ''}" /></li>
-				<li><h:link value="About Us" outcome="/about"
-						styleClass="#{currentTitle=='About' ? 'current last' : 'last'}" /></li>
+				<li><h:link value="My Account" outcome="/accounts/index"
+						styleClass="#{currentTitle=='Account' ? 'current' : ''}" /></li>		
+				<li><h:link value="Users" outcome="/users/index"
+						styleClass="#{currentTitle=='Users' ? 'current last' : 'last'}" /></li>
+				<!-- <li><h:link value="About Us" outcome="/about"
+						styleClass="#{currentTitle=='About' ? 'current last' : 'last'}" /></li> -->
 			</ul>
 		</div>
 		<!-- end of menu -->
