added principal main page and controller

--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -27,9 +27,10 @@
 				<li><h:link value="My Account" outcome="/accounts/index"
 						styleClass="#{currentTitle=='Account' ? 'current' : ''}" /></li>		
 				<li><h:link value="Users" outcome="/users/index"
-						styleClass="#{currentTitle=='Users' ? 'current last' : 'last'}" /></li>
+						styleClass="#{currentTitle=='Users' ? 'current' : ''}" /></li>
 				<!-- <li><h:link value="About Us" outcome="/about"
 						styleClass="#{currentTitle=='About' ? 'current last' : 'last'}" /></li> -->
+				<li><h:link value="Logout" styleClass="last" /></li>
 			</ul>
 		</div>
 		<!-- end of menu -->
