changed menu to hanging added security to sport and league

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -187,6 +187,8 @@ input[type="submit"]:active {
 
 /* menu */
 #templatemo_menu {
+	position: fixed;
+	z-index: 9999;
 	clear: both;
 	width: 980px;
 	height: 55px;
