--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -14,33 +14,7 @@
 <h:body>
 	<div id="tmeplatemo_container">
 
-		<div id="templatemo_menu">
-			<ul>
-				<li><h:link value="Home" outcome="/index"
-						styleClass="#{currentTitle=='Home' ? 'current' : ''}" rendered="#{securityHelper.authorized}" /></li>
-				<li><h:link value="Sports" outcome="/sports/index"
-						styleClass="#{currentTitle=='Sports' ? 'current' : ''}" rendered="#{securityHelper.authorized}" /></li>
-				<li><h:link value="My Leagues" outcome="/leagues/index"
-						styleClass="#{currentTitle=='Leagues' ? 'current' : ''}" rendered="#{securityHelper.authorized}" /></li>
-				<li><h:link value="My Matches" outcome="/matches/index"
-						styleClass="#{currentTitle=='Matches' ? 'current' : ''}" rendered="#{securityHelper.authorized}" /></li>
-				<li><h:link value="My Account" outcome="/accounts/index"
-						styleClass="#{currentTitle=='Account' ? 'current' : ''}" rendered="#{securityHelper.authorized}" /></li>		
-				<li><h:link value="Users" outcome="/users/index"
-						styleClass="#{currentTitle=='Users' ? 'current' : ''}" rendered="#{securityHelper.isInRole('ADMIN')}" /></li>
-				<li><h:link value="About Us" outcome="/about"
-						styleClass="#{currentTitle=='About' ? 'current' : ''}" rendered="#{securityHelper.isInRoles('PLAYER', 'LEAGUE_SUPERVISOR')}"  /></li>
-				<li><h:form><h:commandLink action="#{loginController.logout}" value="Logout" styleClass="last" rendered="#{securityHelper.authorized}" /></h:form></li>
-			</ul>
-		</div>
-		<!-- end of menu -->
-
-		<div id="templatemo_header_02">
-			<div id="site_title">
-				Sports League System<span>Select, Participate, Compete, Win,
-					Decimate ...</span>
-			</div>
-		</div>
+		<ui:include src="header.xhtml"/>
 
 		<div id="tmeplatemo_content">
 
@@ -51,25 +25,7 @@
 				<ui:insert name="side_content">
          		</ui:insert>
          		
-				<div class="header_03">News &amp; Events</div>
-
-				<div class="news_event_section">
-					<div class="header_02">We have successfully finished Sport and League management pages</div>
-					<img
-						src="#{request.contextPath}/resources/css/images/templatemo_image_01.jpg"
-						alt="photo one" />
-					<p>An administrator can now successfully create, remove and update sports and pages. However registration
-					for competition still waits to be done as well as real database.</p>
-				</div>
-
-				<div class="news_event_section">
-					<div class="header_02">Old Trafford to be demolished</div>
-					<img
-						src="#{request.contextPath}/resources/css/images/templatemo_image_00.jpg"
-						alt="photo two" />
-					<p>Today CEO of Manchester United announced the beginning of renovation of Old Trafford stadium. According to plan old stadium
-					which stood as a remainder of once exceptional glory of this club should be tear down by December and replaced by new one.</p>
-				</div>
+                <ui:include src="leftPanel.xhtml"/>
 
 				<div class="cleaner"></div>
 				<div class="bottom"></div>
@@ -87,26 +43,7 @@
 		</div>
 		<!-- end of content -->
 
-		<div id="templatemo_footer">
-
-			Copyright © 2013 <a href="#">Best JBoss Masters</a> | Designed by <a
-				href="http://www.templatemo.com" target="_parent">Free CSS
-				Templates</a>
-
-			<div class="margin_bottom_20"></div>
-
-			<a href="http://validator.w3.org/check?uri=referer"><img
-				style="border: 0; width: 88px; height: 31px"
-				src="http://www.w3.org/Icons/valid-xhtml10"
-				alt="Valid XHTML 1.0 Transitional" width="88" height="31" vspace="8"
-				border="0" /></a> <a
-				href="http://jigsaw.w3.org/css-validator/check/referer"><img
-				style="border: 0; width: 88px; height: 31px"
-				src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-				alt="Valid CSS!" vspace="8" border="0" /></a>
-
-		</div>
-		<!-- end of footer -->
+        <ui:include src="footer.xhtml"/>
 
 	</div>
 	<!-- end of container -->
