--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -275,7 +275,7 @@ input[type="submit"]:active {
 
 /* end of header */
 
-/* contetn */
+/* content */
 #tmeplatemo_content {
 	clear: both;
 	width: 880px;
@@ -419,6 +419,7 @@ input[type="submit"]:active {
 	border-radius: 6px;
 }
 
+/* tables */
 #table td,#table th {
 	padding: 5px;
 	color: #333;
@@ -454,6 +455,26 @@ input[type="submit"]:active {
 	border-top: 1px solid #fff;
 	text-align: center;
 }
+
+#table tr.matches-date-row {
+    padding: .2em 0 .2em .5em;
+    color: #4B4B4B;
+    background-color: #e9e9e9;
+}
+
+#table tr.matches-date-row td {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#table td.left {
+    text-align: left;
+}
+#table td.right {
+    text-align: right;
+}
+/* end of tables */
 
 .column_box {
 	float: left;
