html head separation in templates

--- a/src/main/webapp/WEB-INF/templates/fullWidth.xhtml
+++ b/src/main/webapp/WEB-INF/templates/fullWidth.xhtml
@@ -3,12 +3,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-    <title>Sport League System - #{currentTitle}</title>
-    <meta name="keywords"
-          content="league, match, tennis, football, ping pong, sport"/>
-    <meta name="description" content="Awesome page to choose your league"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <h:outputStylesheet name="css/styles.css"/>
+    <ui:include src="head.xhtml"/>
 </h:head>
 <h:body>
     <div id="tmeplatemo_container">
