--- a/src/main/webapp/WEB-INF/templates/navigation.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navigation.xhtml
@@ -15,12 +15,12 @@
             </li>
             <li>
                 <h:link value="My Leagues" outcome="/leagues/index"
-                        styleClass="#{currentTitle=='Leagues' ? 'current' : ''}"
+                        styleClass="#{currentTitle=='My leagues' ? 'current' : ''}"
                         rendered="#{securityHelper.authorized}"/>
             </li>
             <li>
                 <h:link value="My Matches" outcome="/matches/index"
-                        styleClass="#{currentTitle=='Matches' ? 'current' : ''}"
+                        styleClass="#{currentTitle=='My matches' ? 'current' : ''}"
                         rendered="#{securityHelper.authorized}"/>
             </li>
             <li>
