--- a/src/main/webapp/WEB-INF/templates/navigation.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navigation.xhtml
@@ -14,7 +14,7 @@
                         rendered="#{securityHelper.authorized}"/>
             </li>
             <li>
-                <h:link value="My Leagues" outcome="/leagues/index"
+                <h:link value="My Leagues" outcome="/userleagues/index"
                         styleClass="#{currentTitle=='My leagues' ? 'current' : ''}"
                         rendered="#{securityHelper.authorized}"/>
             </li>
@@ -34,9 +34,14 @@
                         rendered="#{securityHelper.isInRole('ADMIN')}"/>
             </li>
             <li>
+                <h:link value="Leagues" outcome="/leagues/index"
+                        styleClass="#{currentTitle=='Leagues' ? 'current' : ''}"
+                        rendered="#{securityHelper.isInRole('LEAGUE_SUPERVISOR')}"/>
+            </li>
+            <li>
                 <h:link value="About Us" outcome="/about"
                         styleClass="#{currentTitle=='About' ? 'current' : ''}"
-                        rendered="#{securityHelper.isInRoles('PLAYER', 'LEAGUE_SUPERVISOR')}"/></li>
+                        rendered="#{securityHelper.isInRole('PLAYER')}"/></li>
             <li>
                 <h:form>
                     <h:commandLink action="#{loginController.logout}" value="Logout" styleClass="last"
